Fix Header covered with links

--- a/SoloLearn/app/Scripts/styles/Feed/Header.scss
+++ b/SoloLearn/app/Scripts/styles/Feed/Header.scss
@@ -1,5 +1,4 @@
 .feed-header {
-	cursor: pointer;
 	padding: 15px;
 	.details-wrapper {
 		display: flex;
